--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,6 @@
 	<body>
 		<h1>This is a test sentence</h1>
 		<h1>My Astro Site</h1>
+		<p>This is Daniel Kao and this is a test site for michele ann gibson AKA M.A.G.</p>
 	</body>
 </html>
