--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,11 +11,19 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		
-		<h1>This is a test sentence</h1>
+
 		<h1>My Astro Site</h1>
+        <h1>My Astro Learning Blog</h1>
+        <section>
+            <article>
+                <h2>My First Blog Post</h2>
+                <p>Welcome to my blog! This is my first blog post. This is where I will post about my journey learning Astro.</p>
+                <img src="/images/my-picture.jpg" alt="My Picture" />
+            </article>
+        </section>
+
 	</body>
 </html>
