--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = 'Home Page';
 ---
@@ -18,5 +19,7 @@ const pageTitle = 'Home Page';
 		
 		<h1>{pageTitle}</h1>
 		<h1>My Astro Site and a test sentence, Hello, World!</h1>
+
+		<Footer />
 	</body>
 </html>
