updated the footer and added the header with the navigation to all pages, then deleted the previous navigation section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,7 @@ import Social from '../components/Socials.astro';
             position: relative;
             min-height: 100vh;
             padding-bottom: 100px;
+            
 
         }
 
@@ -21,6 +22,9 @@ import Social from '../components/Socials.astro';
             justify-content: center;
             align-items: center;
             padding: 10px;
+            display: absolute;
+            gap: 1rem;
+            margin-top:2rem;
             
         }
 
@@ -33,9 +37,10 @@ import Social from '../components/Socials.astro';
         }
     </style>
 </head>
+
 <footer>
   <p>Learn more about my projects on some future links, coming soon!</p>
-  <Social platform = "Twitter" userName = "astrodobuild"/>
-  <Social platform = "GitHub" userNamel = "withdobu"/>
-  <Social platform = "Youtube" username1 =  "astrodotbuild" />
+  <Social platform = "Twitter" username = "Danielk3922"/>
+  <Social platform = "GitHub" username = "Boisey11"/>
+  <Social platform1 = "LinkedIn" username1 =  "kao-daniel" />
 </footer>
