--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,4 +1,15 @@
 ---
 const { platform, username } = Astro.props;
+const { platform1, username1 } = Astro.props;
 ---
-<a href={`https://www.${platform}.com/${username}`}>{platform}</a>
+<style>
+    a {
+        padding: 0.5rem 1rem;
+        color: white;
+        background-color: #4c1d95;
+        text-decoration: none;
+    }
+</style>
+
+<a href={`https://${platform}.com/${username}/`}>{platform}</a>
+<a href={`https://www.${platform1}.com/in/${username1}`}>{platform1}</a>
