updated the following files with a hamburger header and new css for it

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,5 +21,10 @@ const pageTitle = 'Home Page';
 		<h1>My Astro Site and a test sentence, Hello, World!</h1>
 
 		<Footer />
+
+		<script>
+			import "../scripts/main.js";
+		</script>
+		
 	</body>
 </html>
