updated the hambubrger menu to appear when screen size is smaller and added it to the rest of the pages

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -91,5 +91,8 @@ const textCase = "uppercase";
 		</script>
 
 		<Footer />
+		<script>
+    		import "../scripts/menu.js";
+  		</script>
 	</body>
 </html>
