--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const pageTitle = 'Home Page';
 		<Footer />
 
 		<script>
-			import "../scripts/main.js";
+			import "../scripts/menu.js";
 		</script>
 		
 	</body>
