--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -33,5 +33,8 @@ const pageTitle = 'My Astro Learning Blog';
         </ul>
 
         <Footer />
+        <script>
+            import "../scripts/menu.js";
+        </script>
 	</body>
 </html>
