--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,24 +1,32 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import '../styles/global.css';
-const pageTitle = "Home Page";
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+
+const {pageTitle} = Astro.props;
 ---
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
-    <h1>{pageTitle}</h1>
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="generator" content={Astro.generator} />
+		<title>{pageTitle}</title>
+	</head>
+	<body>
+		<Header />
+		
+		<h1>{pageTitle}</h1>
+		<h1>My Astro Site and a test sentence, Hello, World!</h1>
+
+        <!-- This adds any child content containt with <BaseLayout> or whatever the name is and insert it here -->
+        <slot />
+		<Footer />
+
+		<script>
+			import "../scripts/menu.js";
+		</script>
+		
+	</body>
 </html>
